syntax = "proto3";

option go_package = ".";

package pb;

service ImService {
  rpc GetChannelsData (ChannelsDataRequest) returns (ChannelsDataResponse); // 获取多个频道当前数据
}

message PageInfo {
  int32 total_messages = 1;            // 总消息数量
  int32 page_number = 2;                // 当前页码
  int32 page_size = 3;                  // 每页消息数量
}


message ChannelsDataRequest {
  repeated string channel_ids = 1; // 频道ID数组
}

message ChannelsDataResponse {
  int32 user_count = 1;       // 实时用户数量
  string chat_room_link = 2;  // 聊天室链接
}